--- a/templates/word.html
+++ b/templates/word.html
@@ -50,14 +50,20 @@ body{
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+
+}
+.wrap #title{
+  text-align: center;
 }
 form{
   display: flex;
+  width: 100%;
 }
 </style>
 </head>
 <body>
 <div class="wrap">
+  <h3 id="title">English Dictionary</h3>
    <div class="search">
      <form action="word">
       <input type="text" name="search" class="searchTerm" placeholder="Input Your Word Here">
